# mkdocs-sql

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/examples/: adventureworks.md  adventureworks.sql  create_sample_db.py  docker_setup.md  multiple_databases.md  population.md  population.sqlite  restore_adventureworks.sql
mkdocs_sql/: plugin.py
src/: plugin.py  version.py
