[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs_sql"
version = "0.2.4"
authors = [
    { name = "Vishal Gandhi", email = "igandhivishal@gmail.com" }
]
description = "A MkDocs plugin for executing and displaying SQL queries"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: MkDocs",
    "Topic :: Documentation",
]
dependencies = [
    "mkdocs~=1.6.0",
    "pandas>=2.2.3",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.2",
    "duckdb>=0.10.0",
    "pyodbc>=5.2.0",
]

[project.urls]
Homepage = "https://github.com/ivishalgandhi/mkdocs-sql"
Repository = "https://github.com/ivishalgandhi/mkdocs-sql"
Issues = "https://github.com/ivishalgandhi/mkdocs-sql/issues"

[project.entry-points."mkdocs.plugins"]
sql = "mkdocs_sql.plugin:SQLPlugin"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "build>=1.2.2.post1",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mkdocs-material>=9.5.48",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=0.27.0",
    "pymdown-extensions>=10.12",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "twine>=6.0.1",
]
